// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`snyk-api-import orgs:data <...>\` Generates orgs data as expected 1`] = `"Found 9 organization(s). Written the data to file: group-hello-github-com-orgs.json"`;

exports[`\`snyk-api-import orgs:data <...>\` Generates orgs data as expected for Bitbucket Server 1`] = `"Found 144 project(s). Written the data to file: group-hello-bitbucket-server-orgs.json"`;

exports[`\`snyk-api-import orgs:data <...>\` Generates orgs data as expected for Gitlab 1`] = `"Found 14 group(s). Written the data to file: group-hello-gitlab-orgs.json"`;

exports[`\`snyk-api-import orgs:data <...>\` Shows error when missing groupId 1`] = `
[Error: Command failed: node ./dist/index.js orgs:data --source=github
Debugger attached.
index.js orgs:data

Generate data required for Orgs to be created via API by mirroring a given
source.


Options:
  --version            Show version number                             [boolean]
  --help               Show help                                       [boolean]
  --sourceOrgPublicId  Public id of the organization in Snyk that can be used as
                       a template to copy all supported organization settings.
  --groupId            Public id of the group in Snyk (available on group
                       settings)                                      [required]
  --sourceUrl          Custom base url for the source API that can list
                       organizations (e.g. Github Enterprise url)
  --skipEmptyOrgs      Skip any organizations that do not any targets. (e.g.
                       Github Organization does not have any repos)
  --source             The source of the targets to be imported e.g. Github,
                       Github Enterprise
                   [required] [choices: "github", "github-enterprise", "gitlab",
                                         "bitbucket-server"] [default: "github"]

Missing required argument: groupId
Waiting for the debugger to disconnect...
]
`;

exports[`\`snyk-api-import orgs:data <...>\` Shows help text as expected 1`] = `
"index.js orgs:data

Generate data required for Orgs to be created via API by mirroring a given
source.


Options:
  --version            Show version number                             [boolean]
  --help               Show help                                       [boolean]
  --sourceOrgPublicId  Public id of the organization in Snyk that can be used as
                       a template to copy all supported organization settings.
  --groupId            Public id of the group in Snyk (available on group
                       settings)                                      [required]
  --sourceUrl          Custom base url for the source API that can list
                       organizations (e.g. Github Enterprise url)
  --skipEmptyOrgs      Skip any organizations that do not any targets. (e.g.
                       Github Organization does not have any repos)
  --source             The source of the targets to be imported e.g. Github,
                       Github Enterprise
                   [required] [choices: \\"github\\", \\"github-enterprise\\", \\"gitlab\\",
                                         \\"bitbucket-server\\"] [default: \\"github\\"]"
`;
